# ibkr-eda

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
ibkr_eda/: __init__.py  client.py  config.py  exceptions.py
ibkr_eda/contracts/: details.py  search.py
ibkr_eda/dashboard/: __init__.py  __main__.py  app.py  data_loader.py  metrics.py
ibkr_eda/dashboard/static/: dashboard.js
ibkr_eda/dashboard/templates/: base.html  index.html
ibkr_eda/dashboard_v2/: __init__.py  __main__.py  app.py  config.py
ibkr_eda/dashboard_v2/analytics/: attribution.py  calendar_returns.py  correlation.py  drawdown.py  fama_french.py  monte_carlo.py  optimization.py  pyfolio_bridge.py  returns_metrics.py  risk_contribution.py  rolling.py
ibkr_eda/dashboard_v2/components/: filters.py  metric_card.py  navbar.py  tables.py
ibkr_eda/dashboard_v2/pages/: allocation.py  attribution.py  calendar.py  correlation.py  factors.py  health.py  optimization.py  overview.py  risk.py  tearsheet.py
ibkr_eda/hedging/: __init__.py  config.py  recommendations.py  scenarios.py  vix_data.py
ibkr_eda/market_data/: history.py  snapshot.py
ibkr_eda/options/: __init__.py  chain.py  fallback_provider.py  greeks.py  ibkr_provider.py  provider.py  surface.py  utils.py
ibkr_eda/performance/: analytics.py
ibkr_eda/portfolio/: accounts.py  pnl.py  positions.py  positions_builder.py
ibkr_eda/trades/: executions.py  flex.py  orders.py  transactions.py
ibkr_eda/utils/: rate_limiter.py  transformers.py
notebooks/: 00_connection_test.ipynb  01_trade_eda.ipynb  02_options_explorer.ipynb  03_vix_hedge.ipynb
tests/: _diag_cboe.py  _diag_expiry.py  test_chain_blank_data_fallback.py  test_enrich_fallback.py  test_positions_builder.py
