[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibkr-eda"
version = "0.2.0"
description = "Exploratory data analysis toolkit for Interactive Brokers via TWS API"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "ib_async>=2.0",
    "pandas>=2.1,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "pytest>=8.0",
    "pytest-mock>=3.12",
]
dashboard = [
    "flask>=3.0",
]
flex = [
    "ibflex>=0.9",
]

[tool.setuptools.packages.find]
include = ["ibkr_eda*"]
