[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibkr-eda"
version = "0.2.0"
description = "Exploratory data analysis toolkit for Interactive Brokers via TWS API"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "ib_async>=2.0",
    "pandas>=2.1,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "pytest>=8.0",
    "pytest-mock>=3.12",
]
dashboard = [
    "flask>=3.0",
    "numpy>=1.24",
]
flex = [
    "ibflex>=0.9",
]
options = [
    "yfinance>=0.2.30",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
]
hedge = [
    "yfinance>=0.2.30",
    "ipywidgets>=8.0",
    "plotly>=5.18",
    "numpy>=1.24",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
]
dashboard-v2 = [
    "dash>=2.14",
    "dash-bootstrap-components>=1.5",
    "plotly>=5.18",
    "yfinance>=0.2.31",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "requests>=2.28",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "pyfolio-reloaded>=0.9",
    "riskfolio-lib>=6.0",
]

[project.scripts]
ibkr-dashboard = "ibkr_eda.dashboard.__main__:main"
ibkr-dashboard-v2 = "ibkr_eda.dashboard_v2.__main__:main"

[tool.setuptools.packages.find]
include = ["ibkr_eda*"]
